tests/neg-macros/i7142/Macro_1.scala
package macros
import scala.quoted._

def oops(using Scope) = {
  var v = '{0};
  val q = '{ (x: Int) => ${ v = '{x}; v } } // error
  '{$q($v)}
}
inline def test = ${oops}
